fix[WEB]: Fix very long words in an entry overflowing

--- a/html/styles/global.css
+++ b/html/styles/global.css
@@ -6,6 +6,8 @@
     margin: 0;
     box-sizing: border-box;
 	font-family: Sans-serif;
+    word-break: keep-all;
+    word-wrap: break-word;
 }
 
 body {
