--- a/html/styles/topbar.css
+++ b/html/styles/topbar.css
@@ -1,7 +1,3 @@
-* {
-    word-break: keep-all;
-}
-
 h1 {
 	font-size: 30px;
 	color: #3d3d3d;
